crates/hir-ty/tests/snapshots/jls_annotation_targets__annotation_type_target.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.METHOD)
@interface Inner {}

@Target(ElementType.ANNOTATION_TYPE)
@interface Ok {}

@Inner
@Ok
@interface Anns {}

@11:1: annotation-not-applicable: '@Inner' not applicable to annotation type
