crates/hir-ty/tests/snapshots/jls_annotation_targets__array_target_multi.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target({ ElementType.FIELD, ElementType.TYPE })
@interface FF {}

@FF
class Anns {
    @FF
    int x;

    @FF
    void run() {}
}

@13:5: annotation-not-applicable: '@FF' not applicable to method
