crates/hir-ty/tests/snapshots/jls_annotation_targets__field_annotation_on_method.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target({ ElementType.FIELD, ElementType.PARAMETER })
@interface F {}

class Anns {
    @F
    void run() {}
}

@9:5: annotation-not-applicable: '@F' not applicable to method
