crates/hir-ty/tests/snapshots/jls_annotation_targets__fully_qualified_target.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;

@java.lang.annotation.Target(ElementType.METHOD)
@interface M {}

@M
class Anns {}

@7:1: annotation-not-applicable: '@M' not applicable to type
