crates/hir-ty/tests/snapshots/jls_annotation_targets__method_annotation_on_class.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.METHOD)
@interface Marker {}

@Marker
class Anns {}

@8:1: annotation-not-applicable: '@Marker' not applicable to type
