crates/hir-ty/tests/snapshots/jls_annotation_targets__no_target_and_unknown.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface NoTarget {}

class Anns {
    @NoTarget
    void run() {}
}
