crates/hir-ty/tests/snapshots/jls_annotation_targets__shadowed_target_not_the_jdk_annotation.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Target {}

@Target
interface Anns {}
