crates/hir-ty/tests/snapshots/jls_annotation_targets__type_use_on_type_declaration.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.TYPE_USE)
@interface TU {}

@TU
class Anns {
    @TU
    interface I {}
}
