crates/hir-ty/tests/snapshots/jls_annotation_targets__type_use_with_declaration_element.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.FIELD)
@interface F {}

class Anns {
    @F String field;
}
