crates/hir-ty/tests/snapshots/jls_annotation_targets__type_use_without_type_use.snap
---
source: crates/hir-ty/tests/jls_annotation_targets.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

@Target(ElementType.METHOD)
@interface M {}

@Target(ElementType.TYPE_USE)
@interface T {}

class Anns {
    @M String field;
    @T String ok;
}

@12:5: annotation-not-applicable: '@M' not applicable to field
